# categorical-tools

./: README.md  shell.nix  tools.opam
src/lib/math/: associative.ml  binop.ml  dune  group.mli  group_additive.mli  groupoid.ml  identity.ml  invert.ml  invertable.mli  loop.ml  magma.ml  magmoid.ml  matrix.ml  normalize.ml  quasigroup.ml  quasigroup.mli  random.ml  semigroup.ml  semigroupoid.ml  smallCategory.ml  sphere4d.ml  t.ml  test_with_random.ml  vector4.ml
src/lib/math/other/: associative2.ml  equal.mli  matrix.ml  number.mli
