opam-version: "2.0"
name: "Ocaml tools"
synopsis: ""
description: """
"""
license: ""
maintainer: ""
authors: [ "" ]
homepage: ""
bug-reports: ""
dev-repo: ""
available: os = "linux" | os = "macos"
build: [
  ["opam" "config" "exec" "--" "dune" "subst"] {pinned}
  ["opam" "config" "exec" "--" "dune" "build" "-p" name "-j" jobs]
  ["dune" "runtest" "-p" name] {with-test}
]
install: ["opam" "config" "exec" "--" "dune" "install"]
run-test: ["dune" "runtest" "-p" name]
depends: [
  "zarith"
  "ppx_monadic" {build}
  "ppx_implicits"
]
pin-depends: [
  ["ppx_implicits.hg" "hg+https://bitbucket.org/Kamiel/ppx_implicits#76683cc35f69f7a152cbb65f3ae417acfe3b5adb"]
]
